[project]
name = "spk2py"
version = "0.0.1"
# TODO: add `license-files` once PEP 639 is accepted (see meson-python#88)
license = {file = "LICENSE.txt"}

description = "Fundamental package for array computing in Python"
authors = [{name = "Flynn O'Connell"}]
maintainers = [
    {name = "Flynn O'Connell", email="Flynnoconnell@gmail.com"},
]
requires-python = "3.9"
readme = "README.md"
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
homepage = "https://www.github.com/Flynnoconnell/spk2py"
source = "https://www.github.com/Flynnoconnell/spk2py"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

